# cherryskiller

./: .gitignore  .gitmodules  README.md
common/: README.md  dispatcher.sh  utility.sh
subsystem/: README.md
subsystem/bash/: README.md  run.sh
subsystem/bash/problems/calculator/: Makefile  README.md  problem.json  task.sh
subsystem/bash/problems/file-manager/: README.md  problem.json  task.sh
subsystem/bash/problems/file-manager/test/: simple_test.bats  tests.bats  verify_tests.bats
subsystem/cmake/: run.sh
subsystem/cmake/problems/calc-gcd/: CMakeLists.txt  CTestTestfile.cmake  test_calc_gcd
subsystem/cmake/problems/calc-gcd/src/: CalcGCD.cpp  CalcGCD.h
subsystem/cmake/problems/calc-gcd/test/: CalcGCDTest.cpp  VerificationCalcGCDTest.cpp  test_helpers.h
subsystem/cmake/problems/calculator/: CMakeLists.txt  CTestTestfile.cmake  README.md
subsystem/cmake/problems/calculator/src/: Calculator.cpp  Calculator.h
subsystem/cmake/problems/matrix-mul/: CMakeLists.txt  CTestTestfile.cmake  problem.json  test_matrix
subsystem/cmake/problems/matrix-mul/src/: Matrix.cpp  Matrix.h
subsystem/cmake/problems/matrix-mul/test/: MatrixTest.cpp  VerificationMatrixTest.cpp  test_helpers.h
subsystem/kernel/: README.md
subsystem/subsys/: README.md  run.sh
subsystem/subsys/problem-sample-bash/test/: tests.bats  verify_tests.bats
subsystem/subsys/problem-sample-cmake/src/: Sample.cpp
subsystem/subsys/problem-sample-cmake/test/: SampleTest.cpp  VerificationSampleTest.cpp
